- Fixed wasted whitespace in steps category

--- a/src/app/steps/components/selector/steps-category/steps-category.component.scss
+++ b/src/app/steps/components/selector/steps-category/steps-category.component.scss
@@ -5,7 +5,7 @@
 }
 
 .step-list {
-  height: 350px;
+  max-height: 350px;
 }
 
 .mat-card {
